--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<p>hello eiei</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+   
+</head>
+<body>
+    <div class="container">
+        <div class="item header">
+            <div>YouTube</div>
+            <div>search</div>
+            <div>Profile</div>
+        </div>
+        <div class="item menu">menu</div>
+        <div class="item main">main</div>
+        <div class="item right">right</div>
+        <div class="item footer">footer</div>
+    </div>
+</body>
+</html>
